--- a/Materias/2S2020/IEE_822/Seminarios/Seminario_01/Apresentacao.tex
+++ b/Materias/2S2020/IEE_822/Seminarios/Seminario_01/Apresentacao.tex
@@ -1,4 +1,4 @@
-% Created 2020-12-21 seg 18:25
+% Created 2020-12-22 ter 18:19
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
   \usepackage{caption}
@@ -14,19 +14,26 @@
 
 \maketitle
 \section{\textcite{schularickCreditBoomsGone2012}: Booms de crédito acabam: Política Monetária, ciclos alavancados e crises financeiras (1870-2008)}
-\label{sec:org4780dc4}
+\label{sec:org9c2ccdb}
 
-\begin{frame}[label={sec:orgbe70d63}]{Quem são os autores}
+\begin{frame}[label={sec:orgb9f86eb}]{Quem são os autores?}
 \begin{figure}[htb]
 \centering
-\caption{Allan Taylor + Moritz Schularick} 
+\caption{Allan Taylor (Harvard) + Moritz Schularick (Free University of Berlin)}
 \includegraphics[width = 0.35\textwidth]{./figs/Schularick_Taylor.png}
 \label{fig:autores01}
 \caption*{\textbf{Fonte:} Suspeita}
 \end{figure}
+
+Conjuntamente contribuem no \emph{MacroFinance Lab} e recentemente pesquisam
+
+\begin{itemize}
+\item Macroeconomia financeira, bancária e instabilidade financeira
+\item Finanças internacionais e história econômica
+\end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgdc204c0}]{TL;DR (\emph{a.k.a} nem li; nem lerei)}
+\begin{frame}[label={sec:orgb5cdef0}]{TL;DR (\emph{a.k.a} nem li; nem lerei)}
 Autores apresentam um painel longo (1870-2008) para 14 países da OECD
 
 \begin{itemize}
@@ -48,7 +55,7 @@ Estimam vários modelos/especificações (29!) para verificar os antecedentes da
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org08b47aa}]{Estrutura do artigo}
+\begin{frame}[label={sec:org04172ac}]{Estrutura do artigo}
 \begin{block}{Moeda, crédito e crises financeiras no longo prazo}
 \end{block}
 
@@ -67,7 +74,7 @@ Estimam vários modelos/especificações (29!) para verificar os antecedentes da
 \begin{block}{Testes de robustez}
 \end{block}
 \end{frame}
-\begin{frame}[label={sec:orgdeea6ee}]{Moeda, Crédito e Crises financeiras no longo prazo: Duas eras}
+\begin{frame}[label={sec:orgd447fca}]{Moeda, Crédito e Crises financeiras no longo prazo: Duas eras}
 \begin{block}{Duas Eras do Capitalismo Financeiro}
 \begin{itemize}
 \item \alert{\emph{Money View} (1870-1939):} Relação estável entre moeda e crédito
@@ -88,7 +95,7 @@ Estimam vários modelos/especificações (29!) para verificar os antecedentes da
 \end{itemize}
 \end{block}
 \end{frame}
-\begin{frame}[label={sec:org25dfaf0}]{Duas eras, uma imagem}
+\begin{frame}[label={sec:org7677aea}]{Duas eras, uma imagem}
 \begin{figure}[htb]
 \centering
 \caption{Agregados financeiros/M3} 
@@ -98,7 +105,7 @@ Estimam vários modelos/especificações (29!) para verificar os antecedentes da
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:org19044e6}]{Duas eras, algumas observações}
+\begin{frame}[label={sec:org7231322}]{Duas eras, algumas observações}
 \begin{center}
 \begin{tabular}{lll}
 \hline
@@ -119,7 +126,7 @@ Agregados monetários & Decrecimento & Expansão\\
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8571091}]{Dados e estratégia das estimações}
+\begin{frame}[label={sec:org37b40a6}]{Dados e estratégia das estimações}
 Base de dados permite analizar variávies até então pouco comparáveis
 
 \begin{itemize}
@@ -143,7 +150,7 @@ em que
 \end{itemize}
 \end{block}
 \end{frame}
-\begin{frame}[label={sec:orgbae1cf5}]{Alguns dos resultados de algumas estimações}
+\begin{frame}[label={sec:org9dcb224}]{Alguns dos resultados de algumas estimações}
 \begin{center}
 \begin{center}
 \begin{tabular}{llllll}
@@ -154,12 +161,12 @@ Efeitos fixos & - & País & País + Ano & - & País\\
 \(\sum\) Coef. & \(0.425^{\star\star\star}\) & \(0.417^{\star\star\star}\) & \(0.443^{\star\star\star}\) & \(10.10^{\star\star\star}\) & \(9.697^{\star\star\star}\)\\
 \(\sum L_{Ns} = 0\)\footnotemark & 0.001 & 0.002 & 0.001 & 0.000 & 0.00408\\
 \(R^2\) & 0.016 & 0.023 & 0.290 & 0.0434 & 0.0659\\
-\(F, \chi^{2}\)\textsuperscript{\ref{org58f7ebf}} & 0.001 & 0.045 & 0.000 & 0.000 & 0.00663\\
+\(F, \chi^{2}\)\textsuperscript{\ref{org5be5290}} & 0.001 & 0.045 & 0.000 & 0.000 & 0.00663\\
 AUROC & \(0.673^{\star\star\star}\) & \(0.720^{\star\star\star}\) & \(0.952^{\star\star\star}\) & \(0.673^{\star\star\star}\) & \(0.717^{\star\star\star}\)\\
 \hline
  &  &  &  &  & \\
 \end{tabular}
-\end{center}\footnotetext[1]{\label{org58f7ebf}p-valor}
+\end{center}\footnotetext[1]{\label{org5be5290}p-valor}
 \end{center}
 
 
@@ -171,7 +178,7 @@ Defasagem da taxa de crescimento de crédito (até 5 anos) \(\Rightarrow\) indic
 \end{itemize}
 \end{block}
 \end{frame}
-\begin{frame}[label={sec:orge3ab564}]{Sobre as outras estimações e robustez dos resultados}
+\begin{frame}[label={sec:orgf9d79a9}]{Sobre as outras estimações e robustez dos resultados}
 \begin{itemize}
 \item Agregados monetários não são tão preditivos quanto crédito bancário
 \begin{itemize}
@@ -195,16 +202,43 @@ Crédito bancário continua sendo o principal antecedente das crises financeiras
 \end{frame}
 
 \section{\textcite{sharpe_2020_Why}: Por que o investimento (das firmas) é tão insensível à taxa de juros?}
-\label{sec:org22dcfe2}
+\label{sec:org3e61b16}
 
-\begin{frame}[label={sec:org2fa9063}]{Quem são os autores}
+\begin{frame}[label={sec:org0d2dfc7}]{Quem são os autores?}
+\begin{figure}[htb]
+\centering
+\caption{Steve A. Sharpe (Stanford) + Gustavo A. Suarez (Harvard)}
+\includegraphics[width = 0.35\textwidth]{./figs/Sharpe_Suarez.png}
+\label{fig:autores01}
+\caption*{\textbf{Fonte:} Suspeita}
+\end{figure}
+
+Economistas do FED (Whashington). Atualmente pesquisam:
+
+\begin{itemize}
+\item Política monetária e Mercados Financeiros
+\item Mercados de crédito
+\end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd41adf3}]{Dissecando o artigo}
+\begin{frame}[label={sec:org0e0013f}]{Estrutura do artigo}
+\begin{block}{Embasamento teórico}
+\begin{block}{Sensibilidade do investimento a taxa de juros nos modelos convencionais}
+\end{block}
+\begin{block}{Da teoria à empiria}
+\end{block}
+\end{block}
+\begin{block}{Quetionário e principais descobertas}
+\end{block}
+\begin{block}{Características das firmas respondentes}
+\end{block}
+\begin{block}{Estimação da regressão}
+\end{block}
+\begin{block}{Outros fatores potenciais por trás da insensibilidade}
+\end{block}
 \end{frame}
-
-\begin{frame}[label={sec:org5546fb2}]{TL;DR (\emph{a.k.a} nem li; nem lerei)}
-\emph{Surveys} empresariais indicam elevada insensibilidade do investimento (\emph{ex ante}) à taxa de juros
+\begin{frame}[label={sec:org4c84397}]{TL;DR (\emph{a.k.a} nem li; nem lerei)}
+Questionário indica elevada \alert{insensibilidade} do investimento (\emph{ex ante}) à taxa de juros
 \begin{itemize}
 \item Teoria sugere o inverso
 \item Por quê? Lucros retidos e rigidezes
@@ -215,9 +249,10 @@ IRR_{k} = \frac{A_{k}}{c_{k}} \geq \text{Hurdle rate} \nRightarrow \text{Juros}
 $$
 
 \begin{itemize}
-\item Resultados são bastante robustos e pouco sensíveis à amostra
+\item Resultados são bastante robustos e pouco sensíveis às características amostra
 \begin{itemize}
 \item Há uma assimetria em relação a um aumento/redução dos juros, mas o conclusão permanece
+\item Simetria do "porque não"
 \end{itemize}
 \end{itemize}
 
@@ -227,11 +262,184 @@ $$
 \end{itemize}
 \end{block}
 \end{frame}
+\begin{frame}[label={sec:org35cf161}]{Revisão da literatura teórica}
+\begin{table}[htbp]
+\caption{Mecanismo esperados dos juros ao investimento}
+\centering
+\begin{tabular}{ll}
+\hline
+Modelo (tipo de custo, \(C\)) & Juros \((r) \Leftrightarrow\) Investimento \((I)\)\\
+\hline
+Uso do capital & \(\Uparrow r \Rightarrow \Uparrow C \Rightarrow \Downarrow I\)\\
+Ajustamento & \(I = f(q(t)) = \int_{t}^{{\infty}} \pi_{K}(s)\exp^{-r(s-t)}ds\)\\
+Irreversibilidade e incerteza & Região de inação em torno de \(q(t)\)\\
+Financeiros (ext.) & \(I = f\left(\frac{q(t)}{\text{C fin.}}\right) \Rightarrow \Delta\) Estru. K \(\Rightarrow \Downarrow\) Sens.\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{block}{Resumo}
+Espera-se uma sensibilidade elevada entre taxa de juros e investimento; essa sensibilidade aumenta quanto maior a perspectiva de expansão da firma; maiores custos de financialmento externo; maior rigidez da estrutural de capital
+\end{block}
+\end{frame}
+\begin{frame}[label={sec:org796c0bf}]{Da sensibilidade à rigidez}
+\begin{figure}[htb]
+\centering
+\caption{Taxa mínima de retorno VS Taxa de juros de Longo Prazo} 
+\includegraphics[width = 0.95\textwidth]{./figs/Hurdle.png}
+\label{fig:cycles}
+\caption*{\textbf{Fonte} \textcite[p.~6]{sharpe_2020_Why}}
+\end{figure}
+\end{frame}
+
+\begin{frame}[label={sec:org4fd368d}]{Questionário e desenho amostral}
+\begin{itemize}
+\item 680 Firmas de indústrias não-financeiras
+\item \alert{Controles:} Tamanho da firma, da indústria e regime proprietário
+\end{itemize}
+
+
+\begin{block}{Questão}
+\begin{quote}
+Quanto os planos de investimento se alterariam (em p.p.) dada uma queda/elevação da taxa de juros?
+\end{quote}
+\end{block}
+
+\begin{block}{Respostas}
+\begin{itemize}
+\item Não se aplica
+\item \(0.5 \ldots 3.0+\)
+\item Nada
+\begin{itemize}
+\item Por quê?!
+\end{itemize}
+\end{itemize}
+\end{block}
+\end{frame}
+
+\begin{frame}[label={sec:orgd079670}]{Características das firmas}
+\begin{table}[htbp]
+\caption{Características da amostra}
+\centering
+\begin{tabular}{lr}
+\hline
+Características das firmas & Porcentagem (sem subgrupos)\\
+\hline
+Sem planos de tomar empréstimos & 51\\
+Preocupações com \(K\) de giro & 26\\
+\hline
+Incerteza & 32\\
+Expectativa cresc. receita \(\geq 5\%\) & 58\\
+Expectativa cresc. lucro \(\geq 5\%\) & 53\\
+Renda \(\leq 100 Mi\) & 57\\
+Privada & 78\\
+\hline
+Indústria & 32\\
+Serviços & 18\\
+Varejo & 14\\
+Outros setores & 37\\
+\hline
+\end{tabular}
+\end{table}
+\end{frame}
+
+\begin{frame}[label={sec:orgda691ea}]{Resultados}
+\begin{table}[htbp]
+\caption{Sensibilidade dos planos de investimento às taxas de juros}
+\centering
+\begin{tabular}{rll}
+\hline
+\(\Delta\) Investimento (p.p) & Queda dos juros & Aumento dos juros\\
+\hline
+0.5 & 3\% & 6\%\\
+1 & 5\% & 10\%\\
+2 & 8\% & 16\%\\
+3 & 5\% & 11\%\\
+3+ & 11\% & 20\%\\
+\hline
+\(\sum\) senvível & 32\% & 63\%\\
+\hline
+0 & 68\% & 37\%\\
+Não se aplica & 139 & 146\\
+\hline
+\end{tabular}
+\end{table}
+\end{frame}
+
+\begin{frame}[label={sec:orgbc3edf6}]{Por que não?!}
+\begin{table}[htbp]
+\caption{Razões para a insensibilidade da taxa de juros}
+\centering
+\begin{tabular}{lll}
+\hline
+Motivo & Aumento & Redução\\
+\hline
+Financiamento por fluxo de caixa & 32\% & 49\%\\
+Juros já estão baixos/ \(\pi > r\) & 27\% & 11\%\\
+Elevado endividamento & 4\% & 1\%\\
+Restrição de crédito & 2\% & 2\%\\
+\hline
+\(\sum\) razões financeiras & 65\% & 63\%\\
+\hline
+Investimento depende da demanda/LP & 17\% & 17\%\\
+Sem lucros adicionais & 10\% & 11\%\\
+Elevada incerteza & 3\% & 1\%\\
+Não intensiva em \(K\) /Outros & 5\% & 7\%\\
+\hline
+\(\sum\) razões não-financeiras & 35\% & 37\%\\
+\hline
+\end{tabular}
+\end{table}
+\end{frame}
+\begin{frame}[label={sec:orgb6e7a2c}]{Regressão}
+\begin{block}{Probit e a insensibilidade aos juros}
+\begin{align*}
+Pr(\text{Não reagir}) =& \alpha_{ind} + \beta_{1}\text{Sem plano para pedir empréstimos} + \\
+& \beta_{2}\text{K de giro} + \beta_{3}\text{Balanço Patrimonial} + \beta_{4}\text{Incerteza} + \\
+& \beta_{5}\text{Expec. Cresc.} + \beta_{6}\text{Tamanho} + \beta_{7}\text{Privada}
+\end{align*}
+\end{block}
+\begin{block}{Tobit e o investimento induzido pelos juros}
+$$
+\text{Threshold rate increase} = max\{3.1, \delta X_{i} + u_{i}\}
+$$
+\end{block}
+\begin{block}{Conclusão}
+\begin{itemize}
+\item \alert{Insensibilidade:} \(\Uparrow\) Fluxo de caixa \(\Leftrightarrow \Downarrow\) pedir empréstimos
+\item \alert{Sensibilidade:} Consistente com o modelo \emph{probit}
+\item \alert{Taxa de crescimento esperada:} Resultados ambíguos
+\end{itemize}
+\end{block}
+\end{frame}
+\begin{frame}[label={sec:org512e393}]{Outras explicações pontenciais}
+\begin{itemize}
+\item \alert{Prevalência de acordos de dívida:} Restringem investimento
+\begin{itemize}
+\item \uline{Contra-factual:} Insensibilidade é comum às firmas pequenas e grandes
+\end{itemize}
+\item \alert{Excesso de precaução no ano do questionário:} Crise europeia e expectativas de uma menor demanda
+\begin{itemize}
+\item Outras perguntas do questionário não sugerem isso
+\end{itemize}
+\item \alert{Mudanças nos juros pouco prováveis:} Difícil de imaginar tais cenários
+\begin{itemize}
+\item Agentes atribuem uma baixa probabilidade de reduções ainda maiores nos juros
+\end{itemize}
+\end{itemize}
+
+\begin{block}{Alternativas}
+\begin{itemize}
+\item Importância da estrutura patrimonial das \alert{famílias} \(\Rightarrow\) Transmissão da PM
+\item Investimento resindencial e Consumo de bens durávies \(\Rightarrow\) Sensíveis aos juros
+\end{itemize}
+\end{block}
+\end{frame}
 
 \section{Unindo os pontos?}
-\label{sec:org91ac82b}
+\label{sec:org274e241}
 
-\begin{frame}[label={sec:org1189f44}]{\textcite{schularickCreditBoomsGone2012}: How I Learned to Stop Worrying and Love \textcite{minsky_1977_Financial}?}
+\begin{frame}[label={sec:org33c901b}]{\textcite{schularickCreditBoomsGone2012}: How I Learned to Stop Worrying and Love \textcite{minsky_1977_Financial}?}
 Algumas aproximações com algumas das conclusões de \textcite{minsky_1977_Financial}, mas \(\ldots\)
 
 \begin{itemize}
@@ -250,6 +458,23 @@ Algumas aproximações com algumas das conclusões de \textcite{minsky_1977_Fina
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org6935dfe}]{\textcite{sharpe_2020_Why}: How I Learned to Stop Loving and Worry \textcite{minsky_1977_Financial}?}
+\begin{frame}[label={sec:orgcd7ef7c}]{\textcite{sharpe_2020_Why}: How I Learned to Stop Loving and Worry \textcite{minsky_1977_Financial}?}
+\textcite{schularickCreditBoomsGone2012} reportam a importância do crédito para os ciclos financeiros. No entanto, \textcite{sharpe_2020_Why} sugerem que as firmas não reagem tanto quanto as teorias \emph{a la} \cite{minsky_1977_Financial} descrevem
+
+\begin{itemize}
+\item Se investimento (das firmas) é insensível aos juros, o que fica da HIF?
+\item Existe alguma não-linearidade relevante que não foi considerada?
+\begin{itemize}
+\item \alert{Memo:} Assimetria de sensibilidade é acompanhada da simetria de "motivos"
+\end{itemize}
+\end{itemize}
+
+\begin{block}{Outras Questões abertas}
+\begin{itemize}
+\item Tais resultados se restringem ao EUA/período analizado?
+\item \textcite{minsky_1977_Financial} seria mais aplicável a outros gastos que não investimento produtivo?
+\item Será que a metodologia utilizada é a mais adequada para dados qualitativos?
+\end{itemize}
+\end{block}
 \end{frame}
 \end{document}
