--- a/Orientacoes/Felipe/Reunioes.org
+++ b/Orientacoes/Felipe/Reunioes.org
@@ -202,3 +202,24 @@ Reunião com professor Mariano Laplane
   + Papel da rolagem da dívida pública
 ** Sugestão dos próximos passos
 - Discutir metodologia invés de revisão da literatura
+* Reunião <2020-12-22 ter 11:00-12:00>
+** Sugestões e Comentários Proni
+
+- Apresentar dados de como se ocorre a financeirização
+  + Explicitar quais ativos financeiros e que forma se expresso ao longo do tempo
+  + Do jeito que esta é bastante amplo
+- Delimitação do tema deveria apresentar na revisão bibliográfica ou no tema
+- Desenvolver um pouco mais os autores da financeirização na revisão bibliográfica
+  + Explicitar temática da financeirização
+  + O que é este conceito e como contextualizado ao caso do Brasil
+- Hipótese apresentada esta bastante contida e deveria ser melhor definida e explicitada
+- São apresentados os objetivos particulares, mas não o geral
+  + Deixar mais explícito
+- Financeirização no Brasil é distinto da literatura internacional (explicitar melhor)
+  + Identificar o período de cada padrão de financeirização (colocar os anos e contextualizar)
+- Justificativa pela negação não é usual, nem recomendada
+** Comentários Laplane
+- Dissertação: Financeirização na educação superior privada brasileira
+  + Histórico da financeirização brasileira desde hiperinflação
+- Leitura Bruno e Caffe
+- Miranda e Mattos
